--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@pmmmwh/react-refresh-webpack-plugin",
-  "version": "0.5.1",
-  "description": "An **EXPERIMENTAL** Webpack plugin to enable \"Fast Refresh\" (also previously known as _Hot Reloading_) for React components.",
+  "name": "react-refresh-webpack-plugin-es5",
+  "version": "0.5.0-beta.0-es5",
+  "description": "An **EXPERIMENTAL** Webpack plugin to enable \"Fast Refresh\" (also previously known as _Hot Reloading_) for React components. Modified to inject es5 in runtime to allow for older devices to use Fast Refresh.",
   "keywords": [
     "react",
     "javascript",
